# esp32_rtos

./: .gitignore  .project  CMakeLists.txt  README.md  readme.txt
Core/: CMakeLists.txt  main.c  main.h
Core/Mcu/: timer_handler.c  timer_handler.h  uart_handler.c  uart_handler.h
Core/Rtos/: FreeRTOSConfig.h  freertos.c  freertos.h
Core/System/: utils.c  utils.h
Doc/: howIMix_camelCase_and_Underscores.txt  readme.txt
Doc/Forum/: Configuration settings for input argument name display_ - ESP32 Forum.url  Debug stopped working with Espressif IDE - ESP32 Forum.url  How to relocate or rename main_ & build_ directories - ESP32 Forum.url  Launch configuration for debug config_ - ESP32 Forum.url  Multi-line comments 'Enter' like Eclipse_ - ESP32 Forum.url  PuTTY not able to write to the ESP COM port - ESP32 Forum.url  Spellcheck issue with Espressif IDE - ESP32 Forum.url  Unknown clangd changes preventing my debug sessions to launch - ESP32 Forum.url  Using Eclipse hotkeys in Espressif IDE - ESP32 Forum.url
Doc/FreeRTOS/: FreeRTOS software timers - FreeRTOS™.url
Doc/SDK/: Build System - ESP32.url  General Purpose Timer (GPTimer) - ESP32 - — ESP-IDF Programming Guide v5.2.5 documentation.url
Doc/Web/: Repo esp32_rtos - ErisdarDemo.url
Middlewares/: readme.txt
app/: stats.c  stats.h
appl/: demo.c  demo.h
core/: CMakeLists.txt  main.c
core/mcu/: mcu.c  mcu.h  timer_handler.c  timer_handler.h
core/rtos/: rtos.c  rtos.h
core/system/: system.c  system.h  utils.c  utils.h
doc/: Repo - esp32_rtos - ErisdarDemo - GitHub.url  esp32_base - ErisdarDemo - GitHub.url
doc/board/: readme.txt
doc/esp_base/: readme.txt
doc/parts/: readme.txt
doc/style/: driver.c  source.c
lbr/: CMakeLists.txt  utils.c  utils.h
main/: CMakeLists.txt
proj/: .cproject  .project  CMakeLists.txt  esp32_rtos.code-workspace  sdkconfig
test/: Console.txt  readme.txt  uart_console.lnk
(+31 files in other folders)
